--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "proxy": "https://capstone-3-abad.onrender.com",
+  "proxy": "http://localhost:5002",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
