--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,11 @@
     "react-google-charts": "^4.0.0",
     "react-helmet-async": "^1.3.0",
     "react-hot-toast": "^2.4.0",
-    "react-paypal-js": "^0.0.1-security",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.1",
+    "use-reducer-logger": "^1.0.2",
     "web-vitals": "^3.1.1"
   },
   "scripts": {
