--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
+  "proxy": "http://localhost:5002",
   "private": true,
   "dependencies": {
     "@paypal/react-paypal-js": "^7.8.2",
